# tiny-audio

./: .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .swift-format.json  CLAUDE.md  LICENSE  MODEL_CARD.md  MULTITASK_IMPLEMENTATION.md  README.md  analyze_decoder_lora.py  analyze_lora_rank.py  analyze_projector.py  compare_versions.py  config.json  count_params.py  data_trace.html  debug_labels.py  debug_training.py  explore_audio.py  explore_hubert.py  fix_encoder_weights.py  fix_feature_extractor_config.py  justfile  lora_analysis_results.json  pyproject.toml  requirements.txt  test_audioset_dataset.py  test_batched_decode.py  test_cameo_dataset.py  test_config.py  test_count_params.py  test_dropout_with_frozen.py  test_inference.py  test_moe_projector.py  test_multitask_inference.py  test_projector_config.py  test_regularization.py  test_soda_dataset.py  trace_projector.py  (+2 more)
.github/workflows/: ci.yml
configs/: config.yaml
configs/accelerate/: a40.yaml
configs/data/: combined.yaml  librispeech_dummy.yaml  lm_stage3.yaml  loquacious.yaml  multiasr.yaml  multitask.yaml  omni.yaml  s2s.yaml  s2s_codes.yaml  s2s_latents.yaml  s2s_mimi.yaml  s2s_neucodec.yaml  tts_neucodec.yaml  tts_xcodec2.yaml
configs/demo/: requirements.txt
configs/experiments/: embedded.yaml  embedded_2.yaml  glm.yaml  glm2.yaml  glm_stage_2.yaml  lm_stage1.yaml  lm_stage2.yaml  lm_stage2_tts.yaml  lm_stage3.yaml  mlp.yaml  mlp_fine_tune.yaml  mlp_lora.yaml  mlp_multitask.yaml  moe.yaml  mosa.yaml  mosa_stage2.yaml  mosa_stage_2.yaml  mps_smoke.yaml  multitask.yaml  omni.yaml  qformer.yaml  residual.yaml  s2s.yaml  shared_moe.yaml  swiglu.yaml  transcription.yaml  transformer.yaml  tts.yaml
configs/hydra/: config.yaml
configs/training/: production.yaml
demo/: README.md  agent_demo.py  app.py  gradio_app.py  omni_demo.py  omni_web.py  pipecat_demo.py  requirements.txt  s2s_web.py  streaming_demo.py  tts_app.py
demo/gradio/: app.py  requirements.txt
demo/gradio_agent/: README.md  app.py  requirements.txt
demo/gradio_stt/: app.py
demo/livekit/: .env.example  README.md  requirements.txt  run_agent.sh  voice_agent.py
docs/: COURSE_ISSUES_AND_FIXES.md  IMPROVEMENTS_SUMMARY.md  QUICKSTART.md  S2S_ARCHITECTURE.md  airbench_questions.md  architecture.md  benchmarks.md  mmau_questions.md  omni-training-data.md  training-data.md
docs/course/: 0-course-overview.md  1-introduction-and-setup.md  2-audio-processing-and-encoders.md  2-end-to-end-architecture.md  2-training.md  3-evaluation-and-deployment.md  3-language-models-and-projectors.md  3-training.md  4-evaluation-and-debugging.md  4-evaluation-and-deployment.md  4-quick-reference.md  4-training.md  5-evaluation-and-debugging.md  5-glossary.md  5-publishing-and-deployment.md  6-publishing-and-deployment.md  _sidebar.md
docs/slides/: class-1.html  class-2.html  class-3.html  class-4.html  class-5.html  class-6.html  index.html
scripts/: __init__.py  analysis.py  analyze_moe.py  analyze_moe_shared.py  attach_remote_session.py  bench_mlx_rtf.py  benchmark_audio_head.py  check_flash_attention.py  check_hub_model.py  check_mosa.py  cli.py  convert_checkpoint.py  convert_silero_vad.py  deploy_runpod.py  deploy_to_hf_space.py  dev.py  dev_tools.py  download_samples.py  dump_mel_filterbank.py  dump_swift_fixtures.py  encode_neucodec.py  encode_xcodec2.py  eval.py  eval_wer.py  filter_high_wer.py  find_checkpoint.py  generate_dac.py  generate_jenny_mimi.py  generate_libritts_mimi.py  generate_libritts_mimi_with_audio.py  generate_mimi.py  generate_mimi_latents.py  generate_sift_dataset.py  keyword_wer.py  mimi_1codebook_demo.py  minimal_config.json  optimize_prompt.py  promote_checkpoint.py  publish_mlx_bundle.py  push_to_hub.py  (+11 more)
scripts/debug/: __init__.py  analyze_lora.py  analyze_weights.py  check_encoder_grads.py  check_gradient_flow.py  check_labels.py  check_moe.py  check_mosa.py  cli.py  compare_to_base.py  inspect_datasets.py  norm_analysis.py  projector_norm_analysis.py
scripts/deploy/: __init__.py  cli.py  handler_local.py  hf_space.py  runpod.py
scripts/eval/: __init__.py  audio.py  cli.py  datasets.py
scripts/hub/: __init__.py  assemble_s2s.py  cli.py  push.py  update_config.py
scripts/mlx/: build_bundle.py  cli.py  convert_decoder.py
src/: __init__.py  asr_config.py  asr_modeling.py  asr_pipeline.py  asr_processing.py  asr_projector.py  conv_projector.py  deepseek_conv_projector.py  handler.py  instruction_templates.py  mlp_projector.py  modeling.py  moe_projector.py  projectors.py  residual_projector.py  shared_moe_projector.py  swiglu_projector.py  train.py  voice_agent_pipeline.py
src/integrations/: __init__.py  pipecat_stt.py
swift/: CHANGELOG.md  Makefile  Package.resolved  Package.swift  README.md
swift/TinyAudio.xcworkspace/: contents.xcworkspacedata
swift/docs/: wer-parity.md
tests/: __init__.py  conftest.py  run_e2e_training.sh  test_alignment.py  test_asr_config.py  test_asr_modeling.py  test_asr_pipeline.py  test_asr_processing.py  test_audio_head.py  test_augmentation.py  test_cli.py  test_data.py  test_data_collator.py  test_dataset_loader.py  test_diarization.py  test_e2e.py  test_encode_audio_gather.py  test_encoder_output_masking.py  test_eval_apple_speech.py  test_eval_audio.py  test_eval_base.py  test_eval_cli.py  test_eval_datasets.py  test_eval_deepgram.py  test_eval_diarization.py  test_full_duplex.py  test_handler.py  test_label_normalization.py  test_lora.py  test_mlx_audio_token_splice.py  test_mlx_convert.py  test_mlx_decoder_smoke.py  test_mlx_e2e.py  test_mlx_encoder.py  test_mlx_evaluator.py  test_mlx_mel.py  test_mlx_processor.py  test_mlx_projector.py  test_normalize_label.py  test_pipecat_integration.py  (+13 more)
tiny_audio/: __init__.py  alignment.py  asr_config.py  asr_modeling.py  asr_pipeline.py  asr_processing.py  audio_head.py  augmentation.py  diarization.py  full_duplex.py  handler.py  lm.py  projectors.py  tts.py
tiny_audio/integrations/: __init__.py  pipecat_s2s.py  pipecat_stt.py
tiny_audio/mlx/: __init__.py  convert.py  encoder.py  model.py  processor.py  (+1 more)
(+196 files in other folders)
