[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "tiny-audio"
version = "0.1.0"
description = "Learn ASR by Building One - A minimal speech recognition model combining HuBERT with Qwen3-8B"
authors = [{name = "Alex Kroman", email = "alex@alexkroman.com"}]
license = "MIT"
readme = "README.md"
keywords = ["speech-recognition", "asr", "hubert", "qwen3", "transformers", "deep-learning", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10,<3.13"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/alexkroman/tiny-audio"
Repository = "https://github.com/alexkroman/tiny-audio"
Documentation = "https://github.com/alexkroman/tiny-audio#readme"
"Bug Tracker" = "https://github.com/alexkroman/tiny-audio/issues"

[project.scripts]
# Unified CLI entry points
tiny-audio = "scripts.cli:app"
ta = "scripts.cli:app"

[tool.poetry]
packages = [
    {include = "tiny_audio"},
    {include = "scripts"},
]
include = ["configs/**/*.yaml"]

[[tool.poetry.source]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "supplemental"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
# torch - Poetry will pull from pytorch-cu128 source on Linux when available
torch = "~2.8.0"
soundfile = ">=0.12.1"
librosa = ">=0.10.0"
# GLM-ASR requires transformers from source (>= 5.x not yet released)
transformers = {git = "https://github.com/huggingface/transformers.git"}
datasets = {extras = ["audio"], version = ">=3.0.0,<4.0.0"}
jiwer = "*"
attrs = "*"
rich = "*"
wandb = "*"
numpy = "*"
hydra-core = "*"
omegaconf = "*"
hf-transfer = "*"
ninja = "*"
gradio = "*"
assemblyai = "*"
deepgram-sdk = "*"
typer = ">=0.19.2"
trl = ">=0.26.0"
peft = ">=0.13.0"  # LoRA adapters for Stage 2 fine-tuning
torchaudio = ">=2.0.0"
pyannote-audio = ">=3.1.0"
bitsandbytes = {version = "*", markers = "sys_platform == 'linux'"}
fabric = ">=3.0.0"
pipecat-ai = {extras = ["openai", "silero"], version = "^0.0.98"}
spacy = "^3.8.11"
ten-vad = ">=1.0.6"

[project.optional-dependencies]
local = ["pyaudio>=0.2.14"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=4.0.0"
black = ">=2.3.0"
ruff = ">=0.1.0"
mypy = ">=1.5.0"
pyright = ">=1.1.0"
mdformat = ">=0.7.0"
yamllint = ">=1.35.0"
taplo = ">=0.9.0"
pre-commit = ">=3.0.0"
bandit = ">=1.7.0"
vulture = ">=2.10"
interrogate = ">=1.5.0"
pytest-mock = "^3.15.1"
elevenlabs = "^2.31.0"

[tool.poetry.group.pipecat]
optional = true

[tool.poetry.group.pipecat.dependencies]
pipecat-ai = {extras = ["silero", "openai"], version = ">=0.0.40"}

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
# Ignore specific error codes that are library-related
disable_error_code = ["assignment", "override", "call-overload", "arg-type", "index", "union-attr", "call-arg", "misc", "operator", "attr-defined"]

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_errors = true

[tool.pyright]
include = ["tiny_audio"]
exclude = ["**/node_modules", "**/__pycache__", "outputs", ".venv", "venv"]
ignore = ["tiny_audio/asr_pipeline.py", "tiny_audio/integrations/pipecat_stt.py"]  # Optional deps
typeCheckingMode = "basic"
reportPrivateImportUsage = false
reportOptionalMemberAccess = false
reportOptionalIterable = false
reportOptionalCall = false
reportGeneralTypeIssues = false
reportIncompatibleMethodOverride = false
# PyTorch models have dynamic attributes
reportAttributeAccessIssue = false
reportCallIssue = false
reportIndexIssue = false
# Ignore assignment type issues for PyTorch configs
reportAssignmentType = false
reportArgumentType = false
reportOperatorIssue = false
reportReturnType = false

[tool.pytest.ini_options]
# Test discovery patterns
python_files = "test_*.py *_test.py"
python_classes = "Test*"
python_functions = "test_*"

# Default options
addopts = "-v -s --tb=short"

# Test paths
testpaths = ["tests"]

# Ignore directories
norecursedirs = ["outputs", ".venv", "venv", ".git", "__pycache__", "*.egg-info"]

# Filter out third-party warnings
filterwarnings = [
    "ignore::DeprecationWarning:onnxruntime.*",
    "ignore:builtin type.*has no __module__ attribute:DeprecationWarning",
    "ignore:Specified provider.*is not in available provider names:UserWarning",
]

[tool.ruff]
line-length = 100
target-version = "py38"
extend-exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    ".mypy_cache",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
]
extend-ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip() without an explicit strict= parameter
]

[tool.ruff.lint.per-file-ignores]
# Mathematical notation (A, B, W, S for matrices) is conventional in LoRA analysis
"scripts/debug/analyze_lora.py" = ["N806"]

[tool.mdformat]
wrap = 100
number = false
# Exclude model_card.md to preserve YAML front matter
exclude = ["model_card.md"]

[tool.bandit]
# Skip B615: We intentionally want latest HuggingFace model versions
# Skip B602: RunPod deployment requires shell=True for remote commands
# Skip B108: RunPod deployment uses /tmp for remote scripts
skips = ["B615", "B602", "B108"]
